--- a/public/upload.html
+++ b/public/upload.html
@@ -132,6 +132,30 @@
 		initApp();
 		};
 
+		function list_change(){
+			document.getElementById("selected_sports").style.display="none";
+			document.getElementById("selected_music").style.display="none";
+			document.getElementById("selected_living").style.display="none";
+			document.getElementById("selected_computer").style.display="none";
+			document.getElementById("selected_game").style.display="none";
+
+		var s = document.getElementById("selected_category");
+		var selected_option = s.options[s.selectedIndex].value;
+
+		switch(selected_option){
+			case 'A': document.getElementById("selected_sports").style.display="block";
+					break;
+			case 'B': document.getElementById("selected_music").style.display='block';
+					break;
+			case 'C': document.getElementById("selected_living").style.display='block';
+					break;
+			case 'D': document.getElementById("selected_computer").style.display='block';
+					break;
+			case 'E': document.getElementById("selected_game").style.display='block';
+					break;
+		}
+		}
+
 		function db(){
 
 			var user = firebase.auth().currentUser;
@@ -159,6 +183,29 @@
 			var videoRef = storageRef.child(uid+"/"+"video_"+time+".mp4");
 			var imageRef = storageRef.child(uid+"/"+"video_thumbnail"+time+".jpg");
 			var video_name = document.getElementById('ex_input').value;
+
+			var s = document.getElementById("selected_category");
+			var selected_option = s.options[s.selectedIndex].value;
+			var selected_opt;
+
+			switch(selected_option){
+				case 'A':   var s = document.getElementById("selected_sports");
+										var selected_opt = s.options[s.selectedIndex].value;
+						break;
+				case 'B': var s = document.getElementById("selected_music");
+										var selected_opt = s.options[s.selectedIndex].value;
+						break;
+				case 'C': var s = document.getElementById("selected_living");
+										var selected_opt = s.options[s.selectedIndex].value;
+						break;
+				case 'D': var s = document.getElementById("selected_computer");
+										var selected_opt = s.options[s.selectedIndex].value;
+						break;
+				case 'E': var s = document.getElementById("selected_game");
+										var selected_opt = s.options[s.selectedIndex].value;
+						break;
+			}
+			console.log("선택된 옵션: "+selected_opt);
 
 			//경로
 			var videoFile = document.getElementById('input_video').files[0];
@@ -219,7 +266,8 @@
 
 
 						uploadTask1.snapshot.ref.getDownloadURL().then(function(downloadURL1) {
-							channelRef_user.child(childKey1).child("video_info").push({"name": video_name, "time": time, "videopath": downloadURL1, "thumnnailpath": "https://firebasestorage.googleapis.com/v0/b/webproject-f85df.appspot.com/o/rF6dRaSzGyewRMDGGfaq4b6Uvgn2%2F2020_11_12_17_42_58.jpg?alt=media&token=f65c1039-f0ff-499c-b902-3e82317abb47"});
+							channelRef_user.child(childKey1).child("video_info").push({"name": video_name, "time": time, "videopath": downloadURL1, "thumnnailpath": childData1.imgpath,
+						"category": selected_opt});
 
 							channelRef_list.once('value', (snapshot3)=>{
 
@@ -228,7 +276,8 @@
 								var childData2 = childSnapshot2.val();
 
 								if(childData2.name == channel_name){
-								channelRef_list.child(childKey2).child("video_info").push({"name":video_name, "time": time, "videopath": downloadURL1, "user": uid, "thumnnailpath": "https://firebasestorage.googleapis.com/v0/b/webproject-f85df.appspot.com/o/rF6dRaSzGyewRMDGGfaq4b6Uvgn2%2F2020_11_12_17_42_58.jpg?alt=media&token=f65c1039-f0ff-499c-b902-3e82317abb47"});
+								channelRef_list.child(childKey2).child("video_info").push({"name":video_name, "time": time, "videopath": downloadURL1, "user": uid, "thumnnailpath": childData1.imgpath,
+							"category": selected_opt});
 
 							}
 							});
@@ -330,36 +379,77 @@
         <input type="text" id="ex_input">
       </div>
       <div style=" margin-top:55px;">
-          <label><h3>재생목록</h3></label>
-      <li id='liSearchOption'>
-          <div >
-              <select id='selSearchOption' >
-                  <option value='A'>재생목록1</option>
-                  <option value='T'>재생목록2</option>
-                  <option value='C'>재생목록3</option>
-              </select>
+          <label><h3>카테고리</h3></label>
+					<li id='category'>
+							<div >
+									<select id='selected_category' onchange="list_change()">
+											<option value="A">스포츠</option>
+											<option value='B'>음악</option>
+											<option value='C'>생활</option>
+											<option value='D'>컴퓨터</option>
+											<option value='E'>게임</option>
+									</select>
+							</div>
+					</li>
 
-          </div>
-      </li>
+
+							<div >
+									<select id='selected_sports'>
+											<option value='basketball'>농구</option>
+											<option value='baseball'>야구</option>
+											<option value='football'>축구</option>
+											<option value='swimming'>수영</option>
+									</select>
+							</div>
+
+
+							<div >
+									<select id='selected_music' style="display:none">
+											<option value='piano'>피아노</option>
+											<option value='guitar'>기타</option>
+											<option value='flute'>플룻</option>
+											<option value='violin'>바이올린</option>
+									</select>
+							</div>
+
+							<div >
+									<select id='selected_living' style="display:none">
+											<option value='cleaning'>청소</option>
+											<option value='saving'>저축</option>
+											<option value='cooking'>요리</option>
+											<option value='education'>교육</option>
+									</select>
+							</div>
+
+							<div >
+									<select id='selected_computer' style="display:none">
+											<option value='web'>웹프로그래밍</option>
+											<option value='db'>데이터베이스</option>
+											<option value='data_com'>데이터통신</option>
+											<option value='language'>언어(자바/C++)</option>
+									</select>
+							</div>
+
+							<div >
+									<select id='selected_game' style="display:none">
+											<option value='lol'>롤</option>
+											<option value='fifa'>피파</option>
+											<option value='maplestory'>메이플</option>
+											<option value='cartrider'>카트라이더</option>
+									</select>
+							</div>
       </div>
-      <div>
-        <label><h3>카테고리</h3></label>
-      <li id='liSearchOption'>
-          <div >
-              <select id='selSearchOption' >
-                  <option value='A'>스포츠</option>
-                  <option value='T'>음악</option>
-                  <option value='T'>생활</option>
-                  <option value='T'>컴퓨터</option>
-                  <option value='C'>게임</option>
-              </select>
 
-          </div>
-      </li>
-      </div>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 			영상 찾아보기: <input type="file" id="input_video"/><br>
-			썸네일 찾아보기: <input type="file" id="input_image"/><br>
+			<!--썸네일 찾아보기: <input type="file" id="input_image"/><br>-->
+			<br>
+			<br>
 			<button onclick="db();" >디비 등록</button>
 
     </section>
