--- a/public/upload.html
+++ b/public/upload.html
@@ -209,7 +209,7 @@
 
 			//경로
 			var videoFile = document.getElementById('input_video').files[0];
-			var imageFile = document.getElementById('input_image').files[0];
+			//var imageFile = document.getElementById('input_image').files[0];
 			var uploadTask1 = videoRef.put(videoFile);
 			//var uploadTask2 = videoRef.put(imageFile);
 
