--- a/public/channel_private.html
+++ b/public/channel_private.html
@@ -171,7 +171,7 @@
 
 										"<div style=\"height: 200px; width: 100px; float:right;margin:20px;\">"+
 											"<button style=\"margin-top:70px;\" onClick=\"moveBtn()\">"+
-											"test"+
+											"강의자료 다운"+
 											"</button>"+
 										"</div>"+
 									"</div>"+
