--- a/public/specboard.html
+++ b/public/specboard.html
@@ -61,8 +61,8 @@ body{
 				height:35px;
 }
 
-    #ulTable > li > ul > li:first-child               {width:10%;} /*No 열 크기*/
-    #ulTable > li > ul > li:first-child +li           {width:40%;} /*제목 열 크기*/
+    #ulTable > li > ul > li:first-child               {width:15%;} /*No 열 크기*/
+    #ulTable > li > ul > li:first-child +li           {width:35%;} /*제목 열 크기*/
     #ulTable > li > ul > li:first-child +li+li        {width:15%;} /*작성일 열 크기*/
     #ulTable > li > ul > li:first-child +li+li+li     {width:15%;} /*작성자 열 크기*/
     #ulTable > li > ul > li:first-child +li+li+li+li{width:10%;} /*조회수 열 크기*/
@@ -163,7 +163,7 @@ body{
 			<ul>
 					<!-- 게시판 제목 -->
 					<header class="major" style="margin-top:20px; float:left;">
-						<h2>스터디게시판</h2>
+						<h2>스팩게시판</h2>
 					</header>
 
 
