--- a/public/channel_private.html
+++ b/public/channel_private.html
@@ -561,6 +561,7 @@ function CreateSubs(){
 							</ul>
 						</li>
 						<li><a href="studyboard.html">스터디게시판</a></li>
+						<li><a href="specboard.html">스펙게시판</a></li>
 
 					</ul>
 				</nav>
