--- a/public/index.html
+++ b/public/index.html
@@ -342,6 +342,7 @@ window.addEventListener("message", function(event){
 				            </ul>
 				          </li>
 									<li><a href="studyboard.html">스터디게시판</a></li>
+									<li><a href="specboard.html">스펙게시판</a></li>
 
 				        </ul>
 				      </nav>
